<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".preSale.PreSaleFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/name_menu_item"
        style="@style/TitleMenuItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_pre_sale" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/card_horizontal_margin"
            android:layout_marginRight="@dimen/card_horizontal_margin"
            android:gravity="center_vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/newMailing"
            style="@style/SmallAccentButtonStyle"
            android:layout_width="@dimen/small_button_width"
            android:layout_height="@dimen/small_button_height"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp"
            android:text="@string/add_new_entry"/>

            <ImageView
                android:id="@+id/refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:src="@drawable/ic_baseline_refresh_24" />
        </LinearLayout>

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/tableContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:stretchColumns="4"
            android:padding="5dp"
            android:layout_margin="@dimen/card_horizontal_margin"
            tools:ignore="MissingConstraints">
            <TableRow
                android:id="@+id/tableRow">
                <TextView
                    android:text="@string/table_header_name"
                    android:padding="5dp" />
                <TextView
                    android:padding="5dp"
                    android:text="@string/table_header_status" />
                <TextView
                    android:text="@string/table_header_depart"
                    android:padding="5dp" />
                <TextView
                    android:text="@string/title_logo"
                    android:padding="5dp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>