<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".profile.ProfileFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_menu_item"
            style="@style/TitleMenuItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_profile" />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/card_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/profile_image_2"
            android:layout_gravity="center_horizontal"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/person_name"
            android:textSize="@dimen/font_size_profile_name"
            android:layout_marginTop="@dimen/card_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/profile_name"
            android:textColor="@color/light_black"/>

        <TextView
            android:id="@+id/person_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/profile_position"
            android:textColor="@color/light_black"
            android:textSize="@dimen/font_size_profile_position" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textMail"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_vertical_margin"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:startIconContentDescription="@string/icon_description_mail"
            android:hint="@string/hint_enter_mail"
            android:enabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="project100@gmai.com"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textPhone"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_baseline_phone_android_24"
            app:startIconContentDescription="@string/icon_description_mail"
            android:hint="@string/hint_enter_phone"
            android:enabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:text="+7(900)111-22-33"/>
        </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signInButton"
                style="@style/LargeAccentButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="25dp"
                android:text="@string/edit"
                android:textSize="@dimen/font_size_profile_position" />

        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout >